--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@google/generative-ai": "^0.20.0",
     "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.4.2",
+    "@react-native-firebase/auth": "^17.4.2",
+    "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "assemblyai": "^4.7.0",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-dev-client": "~4.0.28",
+    "expo": "^44.0.6",
+    "expo-dev-client": "~0.8.6",
     "expo-file-system": "^17.0.1",
     "expo-image-manipulator": "^12.0.5",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "~13.0.2",
-    "expo-router": "~3.5.23",
+    "expo-router": "^3.1.0",
     "expo-speech-recognition": "^0.2.24",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.8.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
